Fix cifer dependency inclusion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,25 +26,40 @@ include(cmake/CPM.cmake)
 # PackageProject.cmake will be used to make our target installable
 CPMAddPackage("gh:TheLartians/PackageProject.cmake@1.4.1")
 
-CPMAddPackage(
-  NAME fmt
-  GIT_TAG 7.1.3
-  GITHUB_REPOSITORY fmtlib/fmt
-  OPTIONS "FMT_INSTALL YES" # create an installable target
-)
+# logging
+#CPMAddPackage(
+#  NAME spdlog
+#  GIT_TAG v1.8.2
+#  GITHUB_REPOSITORY gabime/spdlog
+#  OPTIONS "CMAKE_POSITION_INDEPENDENT_CODE ON"
+#)
+
+# CiFEr and it's dependency libraries
+set (CIFER_DEPS_DIR ${PROJECT_SOURCE_DIR}/out/prebuilt/linux) # FIXME
+set(CIFER_DEPS_LIBRARIES cifer gmpxx gmp)
+
+set(CIFER_DEPS_LIB_DIRS
+    ${CIFER_DEPS_DIR}/cifer/lib
+    ${CIFER_DEPS_DIR}/gmp/lib
+    )
+
+set(CIFER_DEPS_INCLUDE_DIRS
+    ${CIFER_DEPS_DIR}/cifer/include
+    ${CIFER_DEPS_DIR}/gmp/include
+    )
+# set_property(TARGET ${target} PROPERTY C_STANDARD 99)
+# set(CMAKE_C_FLAGS "-std=c99")
+add_definitions(-DC99)
+
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # ---- Add source files ----
-
 # Note: globbing sources is considered bad practice as CMake's generators may not detect new files
 # automatically. Keep that in mind when changing files, or explicitly mention them here.
 file(GLOB_RECURSE headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp")
 
 # ---- Create library ----
-# set_property(TARGET ${target} PROPERTY C_STANDARD 99)
-# set(CMAKE_C_FLAGS "-std=c99")
-add_definitions(-DC99)
-
 add_library(prinsight SHARED ${headers} ${sources})
 
 set_target_properties(prinsight PROPERTIES CXX_STANDARD 17)
@@ -52,31 +67,19 @@ set_target_properties(prinsight PROPERTIES CXX_STANDARD 17)
 # being a cross-platform target, we enforce standards conformance on MSVC
 target_compile_options(prinsight PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive>")
 
-# Link dependencies
-target_link_libraries(prinsight PUBLIC fmt::fmt)
-
-target_include_directories(
-  prinsight PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-                 $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
+target_link_libraries(
+  prinsight
+  PUBLIC ${CIFER_DEPS_LIBRARIES}
 )
 
-# 3d party dependency libraries of CiFEr
-set (DEPS_DIR ${PROJECT_SOURCE_DIR}/out/prebuilt/linux) # FIXME
-set(DEPS_LIBRARIES cifer gmpxx gmp spdlog)
-
-target_link_libraries(
-  prinsight PRIVATE
-    ${DEPS_DIR}/cifer/include
-    ${DEPS_DIR}/gmp/include
-    ${DEPS_DIR}/spdlog/include
-    )
-
 target_include_directories(
-  prinsight PRIVATE
-    ${DEPS_DIR}/cifer/lib
-    ${DEPS_DIR}/gmp/lib
-    ${DEPS_DIR}/spdlog/lib
-    )
+  prinsight
+  PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+                 $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
+  ${CIFER_DEPS_LIB_DIRS}
+)
+
+target_link_directories(prinsight PUBLIC ${CIFER_DEPS_LIB_DIRS})
 
 # ---- Create an installable target ----
 # this allows users to install and find the library via `find_package()`.
@@ -94,5 +97,5 @@ packageProject(
   INCLUDE_DESTINATION include/${PROJECT_NAME}-${PROJECT_VERSION}
   VERSION_HEADER "${VERSION_HEADER_LOCATION}"
   COMPATIBILITY SameMajorVersion
-  DEPENDENCIES "fmt 7.1.3"
+  DEPENDENCIES ""
 )
