--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,10 @@ include(../cmake/CPM.cmake)
 CPMAddPackage("gh:onqtam/doctest#2.4.5")
 CPMAddPackage("gh:TheLartians/Format.cmake@1.7.0")
 
+add_compile_definitions(ENABLE_PRINSIGHT_TESTING)
+#message(STATUS "inc ${doctest_SOURCE_DIR}")
+include_directories(${doctest_SOURCE_DIR})
+
 if(TEST_INSTALLED_VERSION)
   find_package(Prinsight REQUIRED)
 else()
@@ -34,7 +38,7 @@ set_target_properties(prinsightTests PROPERTIES CXX_STANDARD 17)
 # enable compiler warnings
 if(NOT TEST_INSTALLED_VERSION)
   if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    target_compile_options(prinsight PUBLIC -Wall -Wpedantic -Wextra -Werror)
+    #target_compile_options(prinsight PUBLIC -Wall -Wpedantic -Wextra -Werror)
   elseif(MSVC)
     target_compile_options(prinsight PUBLIC /W4 /WX)
     target_compile_definitions(prinsightTests PUBLIC DOCTEST_CONFIG_USE_STD_HEADERS)
