Rename files and change namespace scope

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -13,11 +13,54 @@ include(../cmake/tools.cmake)
 
 include(../cmake/CPM.cmake)
 
+# logging
+CPMAddPackage(
+  NAME spdlog
+  GIT_TAG v1.8.2
+  GITHUB_REPOSITORY gabime/spdlog
+)
+
 CPMAddPackage(
   GITHUB_REPOSITORY jarro2783/cxxopts
   VERSION 2.2.0
   OPTIONS "CXXOPTS_BUILD_TESTS NO"
 )
+
+CPMAddPackage(
+  NAME nlohmann_json
+  VERSION 3.9.1
+  # not using the repo as it takes forever to clone
+  URL https://github.com/nlohmann/json/releases/download/v3.9.1/include.zip
+  URL_HASH SHA256=6bea5877b1541d353bd77bdfbdb2696333ae5ed8f9e8cc22df657192218cad91
+)
+
+if(nlohmann_json_ADDED)
+  add_library(nlohmann_json INTERFACE)
+  target_include_directories(nlohmann_json SYSTEM INTERFACE ${nlohmann_json_SOURCE_DIR}/include)
+endif()
+
+# curl
+find_package(CURL REQUIRED)
+#CPMAddPackage(gh:curl/curl@curl-7_75_0)
+#CPMAddPackage(
+#  NAME curl
+#  GIT_TAG curl-7_75_0
+#  GITHUB_REPOSITORY curl/curl
+#)
+
+# Rest http client
+CPMAddPackage(
+  NAME RESTinCurl
+  GIT_TAG master
+  GITHUB_REPOSITORY jgaa/RESTinCurl
+  DOWNLOAD_ONLY YES
+)
+
+if(RESTinCurl_ADDED)
+  add_library(RESTinCurl INTERFACE)
+  target_include_directories(RESTinCurl SYSTEM INTERFACE ${RESTinCurl_SOURCE_DIR}/include)
+endif()
+
 
 CPMAddPackage(NAME Prinsight SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
@@ -34,4 +77,4 @@ target_include_directories(
 
 set_target_properties(piclient PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "piclient")
 
-target_link_libraries(piclient Prinsight::prinsight cxxopts)
+target_link_libraries(piclient Prinsight::prinsight nlohmann_json ${CURL_LIBRARIES}  RESTinCurl spdlog::spdlog cxxopts)
